--- a/MDK-ARM/baro_v4.uvprojx
+++ b/MDK-ARM/baro_v4.uvprojx
@@ -352,7 +352,7 @@
           <Cads>
             <interw>1</interw>
             <Optim>4</Optim>
-            <oTime>0</oTime>
+            <oTime>1</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
             <Strict>0</Strict>
@@ -773,14 +773,14 @@
               <FilePath>..\Src\ms5534.c</FilePath>
             </File>
             <File>
-              <FileName>measurement.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\measurement.c</FilePath>
-            </File>
-            <File>
               <FileName>hardware.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Src\hardware.c</FilePath>
+            </File>
+            <File>
+              <FileName>altitude.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\altitude.c</FilePath>
             </File>
           </Files>
         </Group>
